<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="@dimen/padding_activity_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/padding_activity"
    tools:context=".activities.DetailMovieActivity">

    <com.github.siyamed.shapeimageview.CircularImageView
        android:id="@+id/image_detail_movie"
        android:layout_width="@dimen/detail_picture_size"
        android:layout_height="@dimen/detail_picture_size"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/margin_activity_content"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/tv_detail_title_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="@dimen/detail_title_movie"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_detail_tagline_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_activity_content"
        android:textSize="12sp" />


    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh_layout_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/content_detail_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_activity_content"
                    android:layout_marginBottom="@dimen/margin_activity_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating_value"
                            android:textSize="32sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating"
                            android:textSize="@dimen/size_sub_title_1" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary" />


                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_runtime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating_value"
                            android:textSize="32sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/duration"
                            android:textSize="@dimen/size_sub_title_1" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary" />


                    <LinearLayout
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_language"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating_value"
                            android:textSize="32sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/language"
                            android:textSize="@dimen/size_sub_title_1" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/genres"
                    android:textSize="@dimen/size_sub_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_activity_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/release"
                    android:textSize="@dimen/size_sub_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_release"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_activity_content" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:textSize="@dimen/size_sub_title"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_movie_overview_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:textSize="@dimen/size_content" />


            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>